src/components/Footer/Footer.css
footer {
	padding: var(--footer-block-padding) var(--section-inline-padding);
	background-color: var(--clr-background-footer);
	border-top-right-radius: 100px;
	font-family: var(--ff-footer);
}
.footer__logo {
	margin: 3rem 0;
}
.list {	
	margin: 2rem 0;
	display: grid;
	place-items: center;
	text-align: center;
}
.list__title {
	margin: 2rem 0 2.5rem;
	font-size: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 0.2868)), 2.3rem);
	font-weight: var(--fw-bold);
	color: var(--white);	
}
.list__item {
	margin: 1.5rem 0;
}
.list__link {
	font-size: var(--fs-nav);
	color: var(--clr-link-footer);
	transition: .5s ease;
}
.list__link:hover,
.list__link:focus-visible {
	text-decoration: underline;
}

@media screen and (min-width: 767px) {
	.grid-md-four-columns {
		display: grid;
		grid-template-columns: repeat(4, 1fr);
		place-items: flex-start;
	}
	.list {	
		text-align: left;
	}
}
@media screen and (min-width: 1280px) {
	.list__title {
		margin-bottom: 1rem;
	}
}

